flux/apps/wireguard-easy/base/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-ui
  namespace: wg-easy
spec:
  type: ClusterIP
  ports:
    - name: wg-easy-ui
      protocol: TCP
      port: 51821
      targetPort: 51821
  selector:
    app: wg-easy
