flux/apps/wireguard-easy/base/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-easy-ui
  namespace: wireguard-easy
spec:
  type: ExternalName
  externalName: worker-02
  ports:
  - port: 51821
    targetPort: 51821
    protocol: TCP
