flux/apps/wireguard-easy/base/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-easy-vpn
  namespace: wireguard-easy
spec:
  selector:
    app: wireguard-easy
  ports:
    - name: wg
      port: 51820
      targetPort: 51820
      protocol: UDP
  clusterIP: None
