flux/apps/wireguard-easy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy-ui
  namespace: wg-easy
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16,10.0.0.0/8"
spec:
  ingressClassName: nginx
  rules:
    - host: wg-easy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy-ui
                port:
                  number: 51821
